{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Player",
            "id": "eb22616d-e577-4a41-b9fc-aa96f631f8e8",
            "actions": [
                {
                    "name": "ESC",
                    "type": "Button",
                    "id": "bb62163d-7b76-44dd-9858-7195ab9bbe96",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "9bd342a3-2376-4d02-bbbd-94717c1bb9ba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "20385931-4aa9-4487-9410-15755f06dbc4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "351c6420-7399-4472-92ee-06daa433f186",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "d0bb1a05-58be-4fcd-9e08-cbaec5ac79b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "7912a302-bb4e-4a4e-8291-b55dbfe10c54",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMovement",
                    "type": "PassThrough",
                    "id": "b332a070-24ed-4c4b-a7f2-642796c5ff91",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FreePlacementKey",
                    "type": "Button",
                    "id": "6ea4805b-8bb9-458f-9981-e7eeaf81d85d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "13c6a3e5-213f-4df0-bbc0-3b425d9c26d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef5eac9f-d526-40a8-ae00-79da0d5252b9",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ESC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "5d5d3276-5351-4062-8c68-7de636ae5a3b",
                    "path": "OneModifier(overrideModifiersNeedToBePressedFirst=true)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0395de21-df67-4967-8e01-50813973d6f4",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "3c3ce784-d305-454c-8f75-19e9c7c9d471",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "fe4689f5-ec2d-4a7a-88df-7863217a79e7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e64a71e0-a2a4-4695-bfa2-57cd9e7eca40",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1e7263a6-aa27-44c0-bb5e-439d61215dd9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "54b0742e-bb12-4b22-8243-fbfae2a7c854",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a2813669-1250-49e6-8d96-0a8e99dc2690",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f244422f-2dc6-428f-b239-4ab87000999d",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e6755072-50db-4e82-9abb-174635f6d263",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36d5f75d-a881-4b58-9b19-a6a27c7d3cd7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "b2b98bd6-5ac0-4ae0-b9a7-d2b2a8f8abc7",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "14dee148-c839-4766-aa7b-792f96bd4ba8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6de59cdc-221e-423a-a6fd-10d897e8e39c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "20730426-ec20-44cc-82b2-3810b7183871",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ba7f0bc0-adfb-488c-8232-c388c1581e62",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ce8999b4-1114-4ab3-b04a-a6686a2579da",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FreePlacementKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c8d173d-a42d-4970-9a16-a9b048a966ff",
                    "path": "<Mouse>/{Point}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}